Add function for bug report

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,22 @@
 
 export(EQ_import)
 export(Fizz_import)
+export(bugReportServer)
+export(bugReportUI)
+export(capture_shiny_inputs)
 export(dt_dark)
 export(formatting)
+export(recreate_data_files)
+export(save_inputs_snapshot)
 export(tableformat)
 export(unfill_vec)
 importFrom(magrittr,"%>%")
+importFrom(shiny,NS)
+importFrom(shiny,br)
+importFrom(shiny,downloadButton)
+importFrom(shiny,downloadHandler)
+importFrom(shiny,htmlOutput)
+importFrom(shiny,moduleServer)
+importFrom(shiny,renderText)
+importFrom(shiny,req)
+importFrom(shiny,tagList)
