Add logs functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,11 @@ export(bugReportUI)
 export(capture_shiny_inputs)
 export(dt_dark)
 export(formatting)
+export(init_log_file)
+export(log_event)
+export(log_module_access)
+export(log_session_end)
+export(log_session_start)
 export(recreate_data_files)
 export(save_inputs_snapshot)
 export(tableformat)
