Add release notes code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(log_module_access)
 export(log_session_end)
 export(log_session_start)
 export(recreate_data_files)
+export(release_notes_css)
+export(render_release_notes)
 export(save_inputs_snapshot)
 export(tableformat)
 export(unfill_vec)
